Fix liquibase&r2dbc issue

--- a/common/src/main/resources/application.properties
+++ b/common/src/main/resources/application.properties
@@ -1,11 +1,7 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/library
-spring.datasource.username=uorriuart
+spring.liquibase.url=jdbc:postgresql://localhost:5432/library
+spring.liquibase.user=uorriuart
 
 spring.r2dbc.url=r2dbc:postgresql://localhost:5432/library
 spring.r2dbc.username=uorriuart
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=none
-
-spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:/db/db.changelog-master.yaml
